try to fix actions

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "sass": "^1.79.4",
+    "serve": "^14.2.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
