--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "PUBLIC_URL=https://krlrmlv.github.io/art-practice-react/ craco build",
     "test": "craco test",
-    "eject": "craco eject"
+    "eject": "craco eject",
+    "predeploy": "craco build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +42,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://krlrmlv.github.io/art-practice-react/"
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
+  }
 }
