--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "PUBLIC_URL=https://krlrmlv.github.io/art-practice-react/ craco build",
+    "build": "PUBLIC_URL=https://krlrmlv.github.io/art-practice-react craco build",
     "test": "craco test",
-    "eject": "craco eject",
-    "predeploy": "craco build",
-    "deploy": "gh-pages -d build"
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
@@ -41,8 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.2.0"
   }
 }
