--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,8 @@ jobs:
           cache: 'yarn'
       - name: Install dependencies
         run: yarn install
+      - name: Set Environment Variables
+        run: echo "PUBLIC_URL=${{ secrets.REACT_APP_PUBLIC_URL }}" >> $GITHUB_ENV
       - name: Build
         run: yarn build
       - name: Setup Pages
