--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://krlrmlv.github.io/art-practice-react",
+  "homepage": ".",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0"
